--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body  style="text-align: center;">
+<body  style="text-align: center; background-color: rgb(33, 36, 37); font-family: Arial, Helvetica, sans-serif; color: aliceblue;">
+
+    <h1>Cronômetro 10 Segundos</h1>
+
+    <p>Clique em iniciar e quando o tempo de 10 segundos terminar você será notificad@!</p>
     
-    <button  style="max-width: 100px;">Iniciar</button>
+    <form id="form" action="submit">
+    <button id="myBtn"  type="submitButton"  style="max-width: 100px;">Iniciar</button>
+    </form>
+
 </body>
 <script src="./function.js"></script>
 </html>
