--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body  style="text-align: center; background-color: rgb(33, 36, 37); font-family: Arial, Helvetica, sans-serif; color: aliceblue;">
 
-    <h1>Cronômetro 10 Segundos</h1>
+    <h1 style="margin-top: 200px;">Cronômetro 10 Segundos</h1>
 
     <p>Clique em iniciar e quando o tempo de 10 segundos terminar você será notificad@!</p>
     
     <form id="form" action="submit">
-    <button id="myBtn"  type="submitButton"  style="max-width: 100px;">Iniciar</button>
+    <button id="myBtn"  type="submitButton"  style="width: 100%; max-width: 160px; text-align:center; border-radius:50px;
+    text-decoration: none; cursor:pointer; margin-top: 40px;
+	padding: 15px; color:rgb(238, 107, 19);">Iniciar</button>
     </form>
 
 </body>
